--- a/matrix/nbproject/private/private.properties
+++ b/matrix/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ASUS GAMER\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\Britany\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
